--- a/Company.API/appsettings.json
+++ b/Company.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=.; database=CompanyAngular; Integrated Security=true"
+  },
+  "TrackSettings": {
+    "TrackChanges": true
+  },
   "AllowedHosts": "*"
 }
