Created Services clasess

--- a/Company.API/Company.API.csproj
+++ b/Company.API/Company.API.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Company.DAL\Company.DAL.csproj" />
+    <ProjectReference Include="..\Company.BLL\Company.BLL.csproj" />
     <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
   </ItemGroup>
 
